[tool.poetry]
name = "Berlin-departure-board"
version = "0.1.0"
description = "Real-time BVG station departure board build with FastAPI, Kafka, Spark, and Streamlit"
authors = ["Zaeem Athar"]
readme = "README.md"
packages = [{include = "berlin_departure_board"}]
package-mode = true


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
streamlit = "^1.36.0"
confluent-kafka = "^2.5.0"
duckdb = "^0.10.3"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
plotly = "^5.22.0"
pandas = "^2.2.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
pyspark = "^3.4.0"
py4j = "^0.10.9.5"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
